# lib_shopify_graphql

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  default_cicd_public.yml  integrationtest.yml
docs/systemdesign/: module_reference.md
notebooks/: Quickstart.ipynb
src/lib_shopify_graphql/: __init__.py  __init__conf__.py  composition.py  enums.py
src/lib_shopify_graphql/adapters/: __init__.py  cache_json.py  cache_mysql.py  constants.py  mutations.py  parsers.py  shopify_sdk.py  sku_resolver.py
src/lib_shopify_graphql/adapters/parsers/: __init__.py  _errors.py  _input_builders.py  _mutations.py  _products.py  _truncation.py
src/lib_shopify_graphql/cli/: __init__.py  _cache.py  _common.py  _config.py  _health.py  _images.py  _products.py  _test_limits.py
src/lib_shopify_graphql/defaultconfig.d/: 20-shopify.toml
src/lib_shopify_graphql/models/: __init__.py  _enums.py  _images.py  _mutations.py  _operations.py
src/lib_shopify_graphql/shopify_client/: __init__.py  _common.py  _images.py  _inventory.py  _metafields.py  _products.py  _variants.py  _variants_bulk.py
tests/: conftest.py  test_images.py  test_integration.py  test_parsers.py
