[project]
name = "lib_shopify_graphql"
version = "2.0.5"
description = "Python library for Shopify GraphQL API interactions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.7",
    "lib_cli_exit_tools>=2.3.0",
    "lib_log_rich>=6.3.4",
    "lib_layered_config>=5.5.1",
    "filelock>=3.29.0",
    "orjson>=3.11.8",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["shopify", "graphql", "api", "ecommerce", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

# System packages required for CI runners (read by GitHub Actions workflow template)
# Format: "apt_package_name" for Ubuntu, future: {"apt": "...", "brew": "...", "choco": "..."}
[tool.ci]
system-dependencies-ubuntu = []
system-dependencies-macos = []
system-dependencies-windows-pip = []
system-dependencies-windows-choco = []
os = ["ubuntu-latest", "windows-latest", "macos-latest"]

[project.urls]
Homepage = "https://github.com/bitranox/lib_shopify_graphql"
Repository = "https://github.com/bitranox/lib_shopify_graphql.git"
Issues = "https://github.com/bitranox/lib_shopify_graphql/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.11",
  "pyright[nodejs]>=1.1.409",
  "bandit>=1.9.4",
  "build>=1.4.4",
  "twine>=6.2.0",
  "codecov-cli>=11.2.8",
  "pip-audit>=2.10.0",
  "textual>=8.2.4",
  "import-linter>=2.11",
  "rtoml>=0.13.0",
]
mysql = [
  "pymysql>=1.1.2",
]

[project.scripts]
lib_shopify_graphql = "lib_shopify_graphql.cli:main"
lib-shopify-graphql = "lib_shopify_graphql.cli:main"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/lib_shopify_graphql"]
include = ["src/lib_shopify_graphql/py.typed", "src/lib_shopify_graphql/defaultconfig.toml"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  "scripts/menu.py",
  "tests/test_cli.py",
  "tests/test_sku_resolver.py",
  "LLM-CONTEXT/",
]
# Allow underscore-prefixed imports within package submodules
reportPrivateUsage = "none"
# Click CLI commands are registered via decorators, not called directly
reportUnusedFunction = "none"

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--ignore=src/lib_shopify_graphql/adapters/cache_mysql.py",
  "--ignore=src/lib_shopify_graphql/adapters/location_resolver.py",
  "--ignore=src/lib_shopify_graphql/adapters/sku_resolver.py",
  "--ignore=src/lib_shopify_graphql/adapters/token_cache.py",
  "--ignore=src/lib_shopify_graphql/shopify_client.py",
  "--ignore=src/lib_shopify_graphql/models.py",
  # Internal submodules (doctests reference public API paths)
  "--ignore=src/lib_shopify_graphql/models/_internal.py",
  "--ignore=src/lib_shopify_graphql/shopify_client/_products.py",
  "--ignore=src/lib_shopify_graphql/shopify_client/_variants.py",
  "--ignore=src/lib_shopify_graphql/shopify_client/_variants_bulk.py",
  "--ignore=src/lib_shopify_graphql/shopify_client/_inventory.py",
]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "integration: integration tests requiring real Shopify API connection (slow)",
  "local_only: tests that only run locally, not in CI",
  "mysql_integration: MySQL backend integration tests (skipped in CI)",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/lib_shopify_graphql"]

[tool.coverage.report]
omit = [
  "tests/*",
  # External service adapters (require MySQL/Shopify API)
  "src/lib_shopify_graphql/adapters/cache_mysql.py",
  "src/lib_shopify_graphql/adapters/shopify_sdk.py",
  "src/lib_shopify_graphql/shopify_client.py",
  # Internal submodules (tested via facade, require Shopify API)
  "src/lib_shopify_graphql/shopify_client/_*.py",
]
fail_under = 85
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
[tool.importlinter]
root_package = "lib_shopify_graphql"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Clean Architecture layers"
type = "layers"
layers = [
  "lib_shopify_graphql.adapters",
  "lib_shopify_graphql.application",
  "lib_shopify_graphql.domain",
]
# Dependencies point inward: adapters -> application -> domain

[[tool.importlinter.contracts]]
name = "Domain has no framework dependencies"
type = "forbidden"
source_modules = ["lib_shopify_graphql.domain"]
forbidden_modules = [
  "shopify",
  "pydantic",
]

[[tool.importlinter.contracts]]
name = "Application ports have no adapter dependencies"
type = "forbidden"
source_modules = ["lib_shopify_graphql.application.ports"]
forbidden_modules = [
  "shopify",
  "lib_shopify_graphql.adapters",
]

[tool.bandit]
# B310: urllib.request.urlopen - URL is constructed from validated shop_url
# (must end with .myshopify.com), so file:// and custom schemes are not possible
skips = ["B310"]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable, transitive env tooling, or accepted risk)
ignore-vulns = [
  # py library ReDoS — no fix available, low risk, not a direct dep
  "GHSA-4xh5-x5gv-qwph",
  "PYSEC-2022-42969",  # alias of the above
  # pip: transitive via tooling env (not a runtime dep)
  "CVE-2025-8869",     # pip 24.3.1 tar fallback symlink traversal, fix in 25.3
  "CVE-2026-1703",     # pip: accepted risk, env-only
  # pillow: transitive via tooling env (not a runtime dep)
  "CVE-2026-25990",    # pillow 12.0.0 — env-only
  "CVE-2026-40192",    # pillow 12.0.0 FITS decompression bomb, fix in 12.2.0 — env-only
  # authlib: transitive via tooling env (not a runtime dep)
  "GHSA-jj8c-mmj3-mmgv",  # authlib 1.6.9 cache CSRF, fix in 1.6.11 — env-only
  # cryptography: transitive via tooling env (not a runtime dep)
  "CVE-2026-39892",    # cryptography 46.0.6 non-contiguous buffer overflow, fix in 46.0.7 — env-only
  # lxml: transitive via tooling env (not a runtime dep)
  "CVE-2026-41066",    # lxml 6.0.2 XML entity local-file read, fix in 6.1.0 — env-only
  # python-multipart: transitive via tooling env (not a runtime dep)
  "CVE-2026-40347",    # python-multipart 0.0.22 DoS via crafted multipart, fix in 0.0.26 — env-only
  # uv: developer tool, not a runtime dep
  "GHSA-pjjw-68hj-v9mw",  # uv 0.9.11 wheel RECORD path traversal on uninstall, fix in 0.11.6 — env-only
]
