[project]
name = "lib_shopify_graphql"
version = "2.0.7"
description = "Python library for Shopify GraphQL API interactions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich-click>=1.9.8",
    # click is imported directly (cli/_common.py subclasses click.ParamType), so declare it
    # rather than free-riding on rich-click, which only requires click>=8. The floor is 8.4:
    # ParamType became generic there, and EnumChoice subscripts it (TypeError on click<8.4).
    "click>=8.4.2",
    "lib_cli_exit_tools>=2.3.2",
    "lib_log_rich>=6.3.5",
    "lib_layered_config>=5.6.0",
    "filelock>=3.29.7",
    "orjson>=3.11.9",
    "httpx2>=2.6.0",
    "pydantic>=2.13.4",
]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["shopify", "graphql", "api", "ecommerce", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

# System packages required for CI runners (read by GitHub Actions workflow template)
# Format: "apt_package_name" for Ubuntu, future: {"apt": "...", "brew": "...", "choco": "..."}
[tool.ci]
system-dependencies-ubuntu = []
system-dependencies-macos = []
system-dependencies-windows-pip = []
system-dependencies-windows-choco = []
os = ["ubuntu-latest", "windows-latest", "macos-latest"]

[project.urls]
Homepage = "https://github.com/bitranox/lib_shopify_graphql"
Repository = "https://github.com/bitranox/lib_shopify_graphql.git"
Issues = "https://github.com/bitranox/lib_shopify_graphql/issues"

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.21",
  "pyright[nodejs]>=1.1.411",
  "bandit>=1.9.4",
  "build>=1.5.1",
  "twine>=6.2.0",
  # codecov-cli is disabled, not dropped: it requires click<8.3.0, which holds click at
  # 8.2.1 (CVE-2026-7246). Worse, bmk requires click>=8.4.2, so uv cannot satisfy both and
  # silently BACKTRACKS bmk to 3.1.7 - this repo stopped receiving bmk updates entirely,
  # with no error. Verified nothing is lost: CI uploads coverage via codecov/codecov-action
  # (.github/workflows/default_cicd_public.yml) and nothing here invokes the CLI.
  # Re-enable once codecov-cli relaxes its click<8.3.0 pin.
  # "codecov-cli>=11.2.8",
  "pip-audit>=2.10.1",
  "textual>=8.2.8",
  "import-linter>=2.13",
  "rtoml>=0.13.0",
]
mysql = [
  "pymysql>=1.2.0",
]

[project.scripts]
lib_shopify_graphql = "lib_shopify_graphql.cli:main"
lib-shopify-graphql = "lib_shopify_graphql.cli:main"

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]
packages = ["src/lib_shopify_graphql"]
include = ["src/lib_shopify_graphql/py.typed", "src/lib_shopify_graphql/defaultconfig.toml"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [
  "src",
]
exclude = [
  # Restore pyright's built-in default excludes (setting `exclude` overrides them).
  # `**/.*` keeps pyright out of dot-dirs such as a local `.venv`, `.git`, and tool caches.
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  "scripts/menu.py",
  "tests/test_cli.py",
  "tests/test_sku_resolver.py",
  "LLM-CONTEXT/",
]
# Allow underscore-prefixed imports within package submodules
reportPrivateUsage = "none"
# Click CLI commands are registered via decorators, not called directly
reportUnusedFunction = "none"

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--ignore=src/lib_shopify_graphql/adapters/cache_mysql.py",
  "--ignore=src/lib_shopify_graphql/adapters/location_resolver.py",
  "--ignore=src/lib_shopify_graphql/adapters/sku_resolver.py",
  "--ignore=src/lib_shopify_graphql/adapters/token_cache.py",
  "--ignore=src/lib_shopify_graphql/shopify_client.py",
  "--ignore=src/lib_shopify_graphql/models.py",
  # Internal submodules (doctests reference public API paths)
  "--ignore=src/lib_shopify_graphql/models/_internal.py",
  "--ignore=src/lib_shopify_graphql/shopify_client/_products.py",
  "--ignore=src/lib_shopify_graphql/shopify_client/_variants.py",
  "--ignore=src/lib_shopify_graphql/shopify_client/_variants_bulk.py",
  "--ignore=src/lib_shopify_graphql/shopify_client/_inventory.py",
]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
pythonpath = ["src"]
markers = [
  "os_agnostic: test runs on every supported operating system",
  "os_windows: test exercises Windows-only behavior",
  "os_macos: test exercises macOS-only behavior",
  "os_posix: test exercises behavior requiring POSIX semantics",
  "os_linux: test exercises Linux-only behavior",
  "integration: integration tests requiring real Shopify API connection (slow)",
  "local_only: tests that only run locally, not in CI",
  "mysql_integration: MySQL backend integration tests (skipped in CI)",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/lib_shopify_graphql"]

[tool.coverage.report]
omit = [
  "tests/*",
  # External service adapters (require MySQL/Shopify API)
  "src/lib_shopify_graphql/adapters/cache_mysql.py",
  "src/lib_shopify_graphql/adapters/shopify_sdk.py",
  "src/lib_shopify_graphql/shopify_client.py",
  # Internal submodules (tested via facade, require Shopify API)
  "src/lib_shopify_graphql/shopify_client/_*.py",
]
fail_under = 85
show_missing = true

[tool.coverage.json]
output = "coverage.json"
pretty_print = true

[tool.clean]
# Patterns to remove when running `make clean`
patterns = [
  "**/__pycache__",
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
[tool.importlinter]
root_package = "lib_shopify_graphql"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Clean Architecture layers"
type = "layers"
layers = [
  "lib_shopify_graphql.adapters",
  "lib_shopify_graphql.application",
  "lib_shopify_graphql.domain",
]
# Dependencies point inward: adapters -> application -> domain

[[tool.importlinter.contracts]]
name = "Domain has no framework dependencies"
type = "forbidden"
source_modules = ["lib_shopify_graphql.domain"]
forbidden_modules = [
  "shopify",
  "pydantic",
]

[[tool.importlinter.contracts]]
name = "Application ports have no adapter dependencies"
type = "forbidden"
source_modules = ["lib_shopify_graphql.application.ports"]
forbidden_modules = [
  "shopify",
  "lib_shopify_graphql.adapters",
]

[tool.bandit]
# B310: urllib.request.urlopen - URL is constructed from validated shop_url
# (must end with .myshopify.com), so file:// and custom schemes are not possible
skips = ["B310"]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable, transitive env tooling, or accepted risk).
# Curated against the developer toolchain environment; entries become no-ops on the
# clean project dependency closure (which pip-audit reports as vulnerability-free).
ignore-vulns = [
  # py library ReDoS (CVE-2022-42969) — unmaintained dev/test-only dependency, no fix available
  "PYSEC-2022-42969",
  # paramiko: developer/tooling env dependency, not a runtime dep
  "CVE-2026-44405",       # paramiko 4.0.0 permits SHA-1 in rsakey.py, no fix released — env-only
  # uv: developer tool (package manager), not a runtime dep
  "GHSA-4gg8-gxpx-9rph",  # uv 0.11.7 entry-point path traversal on install, fix in 0.11.15 — env-only
]
